--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
+    "autoprefixer": "^10.3.1",
+    "axios": "^0.21.1",
     "faker": "^5.5.3",
     "msw": "^0.34.0",
     "next": "11.0.1",
+    "next-auth": "^3.27.3",
+    "postcss": "^8.3.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.3",
+    "react-query": "^3.19.3",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
