--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "msw": "^0.34.0",
     "next": "11.0.1",
     "next-auth": "^3.27.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
