--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-query": "^3.19.3",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.7",
+    "vercel": "^23.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
