--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@keystone-next/fields": "^13.0.0",
     "@keystone-next/fields-document": "^7.0.3",
     "@keystone-next/keystone": "^23.0.3",
+    "@next-auth/prisma-adapter": "^0.5.3",
     "@prisma/client": "^2.29.0",
     "autoprefixer": "^10.3.1",
     "axios": "^0.21.1",
     "faker": "^5.5.3",
     "msw": "^0.34.0",
     "next": "11.0.1",
-    "next-auth": "^3.27.3",
+    "next-auth": "^3.28.0",
     "npm-run-all": "^4.1.5",
+    "pg": "^8.7.1",
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -55,7 +57,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
-    "prisma": "^2.29.0",
+    "prisma": "^2.29.1",
     "react-test-render": "^1.1.2",
     "ts-jest": "^27.0.4",
     "typescript": "4.3.5"
