--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "author": "Daniel Van Cuylenburg <email@danielvanc.com> (https://danielvanc.com/)",
-  "engines": {"node": ">=16.2.0"},
+  "engines": {
+    "node": ">=16.2.0"
+  },
   "scripts": {
     "dev": "next dev",
+    "prebuild": "echo 'Building Sanity to public/studio' && cd studio && yarn && npx sanity build ../public/studio -y && echo 'Done'",
     "build": "next build",
     "start": "next start",
+    "sanity": "cd studio && sanity start",
     "lint": "next lint",
     "test": "jest --watch",
     "test:ci": "jest --ci",
@@ -23,12 +27,14 @@
     "msw": "^0.34.0",
     "next": "11.0.1",
     "next-auth": "^3.28.0",
+    "next-sanity": "^0.4.0",
     "npm-run-all": "^4.1.5",
     "pg": "^8.7.1",
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-error-boundary": "^3.1.3",
+    "react-icons": "^4.2.0",
     "react-query": "^3.19.3",
     "tailwindcss": "^2.2.7",
     "vercel": "^23.1.2"
