--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "msw": "^0.34.0",
     "next": "11.0.1",
     "next-auth": "^3.28.0",
+    "next-auth-sanity": "^1.3.0",
     "next-sanity": "^0.4.0",
     "npm-run-all": "^4.1.5",
     "pg": "^8.7.1",
