--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-error-boundary": "^3.1.3",
     "react-icons": "^4.2.0",
     "react-query": "^3.19.3",
+    "sanity": "^2.14.0",
     "tailwindcss": "^2.2.7",
     "vercel": "^23.1.2"
   },
