--- a/studio/package.json
+++ b/studio/package.json
@@ -16,15 +16,18 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.14.0",
+    "@sanity/cli": "^2.15.0",
     "@sanity/components": "^2.14.0",
     "@sanity/core": "^2.14.0",
     "@sanity/default-layout": "^2.14.0",
     "@sanity/default-login": "^2.14.0",
     "@sanity/desk-tool": "^2.14.0",
     "@sanity/vision": "^2.14.0",
+    "global": "^4.4.0",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "sanity": "^2.14.0"
   },
   "devDependencies": {},
   "repository": {
