--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,15 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["src", "next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js", "tailwind.config.js"],
+  "include": [
+    "src",
+    "next-env.d.ts",
+    "next.d.ts",
+    "types/next.auth.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "postcss.config.js",
+    "tailwind.config.js"
+  ],
   "exclude": ["node_modules"]
 }
