--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.2.1",
+    "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.24",
     "@types/react": "17.0.16",
     "babel-jest": "^27.0.6",
