--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^0.21.1",
     "faker": "^5.5.3",
     "msw": "^0.34.0",
-    "next": "11.0.1",
+    "next": "^12.0.2",
     "next-auth": "^3.28.0",
     "next-auth-sanity": "^1.3.0",
     "next-sanity": "^0.4.0",
