--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "dependencies": {
     "@headlessui/react": "^1.4.0",
     "autoprefixer": "^10.3.1",
-    "axios": "^0.21.1",
-    "faker": "^5.5.3",
-    "msw": "^0.34.0",
+    "axios": "^0.24.0",
+    "faker": "^6.6.6",
+    "msw": "^0.36.4",
     "next": "^12.0.2",
-    "next-auth": "^3.28.0",
+    "next-auth": "^4.1.0",
     "next-auth-sanity": "^1.3.0",
     "next-sanity": "^0.4.0",
     "npm-run-all": "^4.1.5",
@@ -35,7 +35,7 @@
     "react-icons": "^4.2.0",
     "react-query": "^3.19.3",
     "sanity": "^2.14.0",
-    "tailwindcss": "^2.2.7",
+    "tailwindcss": "^3.0.13",
     "vercel": "^23.1.2"
   },
   "devDependencies": {
@@ -48,19 +48,18 @@
     "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.2.1",
     "@types/faker": "^5.5.8",
-    "@types/jest": "^26.0.24",
-    "@types/react": "17.0.16",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
     "babel-jest": "^27.0.6",
-    "cypress": "^8.2.0",
+    "cypress": "^9.2.1",
     "cypress-hmr-restarter": "^2.0.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1",
+    "eslint": "^8.6.0",
+    "eslint-config-next": "^12.0.7",
     "eslint-plugin-cypress": "^2.11.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
-    "react-test-render": "^1.1.2",
     "ts-jest": "^27.0.4",
-    "typescript": "4.3.5"
+    "typescript": "^4.5.4"
   }
 }
