--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "importHelpers": true,
     "baseUrl": "./src",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -16,7 +17,8 @@
     "jsx": "preserve",
     "paths": {
       "@/components/*": ["components/*"]
-    }
+    },
+    "incremental": true
   },
   "include": [
     "src",
