--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
+    "@supabase/supabase-js": "^1.29.1",
     "autoprefixer": "^10.3.1",
     "axios": "^0.24.0",
     "faker": "^6.6.6",
