--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "paths": {
-      "@/components/*": ["components/*"]
+      "@/components/*": ["components/*"],
+      "@/public/*": ["./public/*"]
     },
     "incremental": true
   },
@@ -24,7 +25,6 @@
     "src",
     "next-env.d.ts",
     "next.d.ts",
-    "types/next.auth.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "postcss.config.js",
